# rustic

./: .gitignore  Cargo.toml  Makefile  build.sh  changelog.md  gnu.sh  msvc.sh  readme.md  switch_gnu.sh  switch_msvc.sh  test_fix.ps1
docs/: ILLEGAL_MOVE_FIX.md  TIME_MANAGEMENT.md  TT_OPTIMIZATION.md  build.md  changelog.md  credits.md
epdtest/: Cargo.toml
epdtest/src/: cmdline.rs  epds.rs  main.rs
examples/: best_move.rs  engine.rs
librustic/: Cargo.toml
librustic/examples/: best_move.rs  engine.rs
librustic/src/: board.rs  communication.rs  defs.rs  engine.rs  evaluation.rs  extra.rs  lib.rs  main.rs  misc.rs  movegen.rs  new_comm.rs  search.rs  transposition.rs
librustic/src/basetypes/: error.rs
librustic/src/board/: defs.rs  display.rs  fen.rs  gamestate.rs  history.rs  init.rs  moving.rs  playmove.rs  utils.rs  zobrist.rs
librustic/src/comm/: defs.rs  protocols.rs  shared.rs
librustic/src/comm/protocols/: uci.rs  xboard.rs
librustic/src/communication/: defs.rs  feature.rs  features.rs  protocol.rs  shared.rs  uci.rs  xboard.rs
librustic/src/communication/uci/: cmd_in.rs  cmd_out.rs  defs.rs  init.rs  output.rs  parse.rs  print.rs  thread_in.rs  thread_out.rs  uci_option.rs
librustic/src/communication/xboard/: cmd_in.rs  cmd_out.rs  defs.rs  init.rs  parse.rs  print.rs  thread_in.rs  thread_out.rs
librustic/src/engine/: comm_handler.rs  defs.rs  game_result.rs  main_loop.rs  search_handler.rs  utils.rs
librustic/src/engine/comm_handler/: uci.rs  xboard.rs
librustic/src/evaluation/: defs.rs  eval.rs  phase.rs  psqt.rs
librustic/src/extra/: testsuite.rs  wizardry.rs
librustic/src/extra/texel/: data_file.rs  defs.rs
librustic/src/misc/: bits.rs  cmdline.rs  parse.rs  perft.rs
librustic/src/movegen/: create.rs  defs.rs  generate.rs  init.rs  magics.rs  wizardry.rs
librustic/src/search/: alpha_beta.rs  control.rs  defs.rs  iter_deep.rs  qsearch.rs  search_data.rs  sorting.rs  time.rs  transposition.rs  utils.rs
librustic/src/transposition/: bucket.rs  defs.rs  entry.rs  table.rs
rustic/: Cargo.toml
rustic/src/: engine.rs  main.rs
rustic/src/engine/: about.rs  cmdline.rs  comm_handler.rs  defs.rs  features.rs  game_result.rs  handlers.rs  main_loop.rs  search_handler.rs  states.rs  utils.rs
rustic/src/engine/comm_handler/: uci.rs  xboard.rs
rustic/src/engine/features/: clear_hash.rs  hash.rs  uci.rs
rustic/src/engine/handlers/: search.rs  uci.rs  xboard.rs
rustic/src/engine/uci_options/: clear_hash.rs  hash.rs
src/: board.rs  comm.rs  defines.rs  defs.rs  engine.rs  evaluation.rs  extra.rs  fen.rs  interface.rs  magics.rs  main.rs  masks.rs  misc.rs  move_boards.rs  movegen.rs  movegenerator.rs  perft.rs  print.rs  search.rs  utils.rs
src/board/: defs.rs  display.rs  do_move.rs  domove.rs  draw.rs  fen.rs  gamestate.rs  history.rs  init.rs  make_move.rs  mod.rs  monotonic_hash.rs  playmove.rs  read_fen.rs  representation.rs  support.rs  to_fen.rs  unmake_move.rs  utils.rs  zobrist.rs
src/comm/: cli.rs  console.rs  defs.rs  input.rs  protocol.rs  protocols.rs  shared.rs  uci.rs  xboard.rs
src/engine/: about.rs  actions.rs  comm_handler.rs  comm_reports.rs  defs.rs  game_result.rs  hash_table.rs  in_out.rs  main_loop.rs  misc.rs  search_handler.rs  search_reports.rs  transposition.rs  utils.rs
src/evaluation/: defs.rs  evaldefs.rs  material.rs  phase.rs  psqt.rs  pst.rs  weights.rs
src/extra/: epds.rs  perft.rs  perftsuite.rs  print.rs  testsuite.rs  texel.rs  wizardry.rs
src/interface/: console.rs  uci.rs
src/magics/: attacks.rs  masks.rs  mod.rs
src/misc/: active_side.rs  (+10 more)
texel/: Cargo.toml
texel/src/: main.rs  texel.rs
texel/src/texel/: data_file.rs  data_point.rs  defs.rs  display.rs  init_eval.rs  k_factor.rs  result_types.rs
wizardry/: Cargo.toml
(+60 files in other folders)
