[workspace]

members = ["librustic", "rustic", "texel", "wizardry", "epdtest"]
resolver = "2"

[workspace.package]
version = "3.99.0"
authors = ["Marcel Vanthoor <mail@marcelvanthoor.nl>"]
edition = "2024"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
strip = "symbols"
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
debug-assertions = false
incremental = false
overflow-checks = false
