[package]
name = "rustic-sharp"
version = "1.0.2"
authors = ["Marcel Vanthoor, Matt Voce"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_core = "0.6.4"
rand_chacha = "0.3.1"
if_chain = "1.0.2"
clap = "4.4.18"
crossbeam-channel = "0.5.11"


[features]
extra = []

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
debug-assertions = false
incremental = false
overflow-checks = false
