[package]
name = "librustic"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_core = "0.6.4"
rand_chacha = "0.3.1"
if_chain = "1.0.2"
clap = "4.5.23"

[features]
extra = []
