[package]
version = "0.1.0"
name = "librustic"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.0", features = ["small_rng"] }
rand_chacha = "0.9.0"
if_chain = "1.0.2"

[features]
extra = []
