[package]
name = "rustic"
version = "3.99.0"
authors = ["Marcel Vanthoor <mail@marcelvanthoor.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librustic = { path = "../librustic" }
if_chain = "1.0.2"

[features]
extra = []
